tests/errors/codec_omitnull_with_omitempty.dang
# omitNull and omitEmpty are redundant together; omitEmpty already omits null.

type OmitConflict {
  field: String @JSON.field(omitNull: true, omitEmpty: true)
}

print("Should not reach here!")
